# healingstone

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  align_fragments.py  docker-compose.yml  features.py  healing_stones.py  match_fragments.py  preprocess.py  pyproject.toml  reconstruct.py  requirements.txt  roadmap.md  run_pipeline.py  test_pipeline.py  train_model.py
.github/workflows/: ci.yml
artifacts/test_smoke/results/: aligned_fragment_00.ply  aligned_fragment_01.ply  aligned_fragment_02.ply  report.json
artifacts/test_smoke/synthetic_fragments/: fragment_00.ply  fragment_01.ply  fragment_02.ply  fragment_03.ply  ground_truth_pairs.json
configs/: datasets.yaml  pipeline.yaml  train.yaml
docs/: DATASET_INTEGRITY_REPORT.md  FINAL_SYSTEM_CERTIFICATION.md  MESH_PERFORMANCE_REPORT.md  RECONSTRUCTION_BENCHMARK_REPORT.md  SECURITY_AUDIT_REPORT.md  SUBMISSION_MANIFEST.md  SYSTEM_DEPENDENCY_GRAPH.md  constraints.md  developer_takeover.md  problemstatement.md  proposal.md  submission_guidelines.md
results/: alignment_metrics.json  labeling_candidates.csv  labels.csv
scripts/: check_lock.py  run_pipeline.py  test_pipeline.py
src/healingstone/: __init__.py  align_fragments.py  features.py  healing_stones.py  match_fragments.py  metrics_schema.py  reconstruct.py  run_pipeline.py  runtime_config.py  runtime_paths.py  test_pipeline.py  train_model.py
src/healingstone/alignment/: __init__.py  align_fragments.py  reconstruct.py
src/healingstone/api/: __init__.py  cli.py
src/healingstone/config/: __init__.py  environment.py
src/healingstone/core/: __init__.py  adaptive_voxel_downsampling.py  benchmark_reconstruction.py  features.py  logging_config.py  metrics_collector.py  metrics_schema.py  preprocess.py  security_audit.py  validate_dataset.py
src/healingstone/healingstone2d/: __init__.py  align_fragments_2d.py  edge_detection.py  match_fragments_2d.py  preprocess_2d.py  reconstruct_2d.py  shape_descriptors.py
src/healingstone/ml_models/: __init__.py  match_fragments.py  surface_model.py  train_model.py
src/healingstone/pipeline/: __init__.py  run_pipeline.py  test_pipeline.py
src/healingstone/services/: __init__.py  reconstruction_service.py
src/healingstone/utils/: __init__.py  runtime_info.py
src/healingstone2d/: __init__.py  align_fragments_2d.py  edge_detection.py  match_fragments_2d.py  preprocess_2d.py  reconstruct_2d.py  shape_descriptors.py
tests/: test_api_entrypoint.py  test_cli_wrappers.py  test_deterministic_metrics.py  test_environment_defaults.py  test_input_detection.py  test_metrics_schema.py  test_pipeline_detection.py  test_reconstruction_pipeline.py  test_runtime_config.py  test_runtime_paths.py  test_runtime_paths_2d.py  test_train_config_forwarding.py
