[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "healingstone"
version = "0.2.0"
description = "3D and 2D fragmented artifact reconstruction pipeline"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
  "numpy>=1.24",
  "matplotlib>=3.8",
  "scikit-learn>=1.3",
  "networkx>=3.2",
  "pydantic>=2.7",
  "PyYAML>=6.0",
  "Pillow>=10.0",
]

[project.optional-dependencies]
runtime = [
  "open3d>=0.18.0; python_version < '3.13'",
  "torch>=2.2; python_version < '3.13'",
  "opencv-python>=4.8",
]
pipeline2d = [
  "opencv-python-headless>=4.8",
  "scikit-image>=0.21",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.8",
  "pip-tools>=7.4",
]

[project.scripts]
healingstone-run = "healingstone.run_pipeline:main"
healingstone-test = "healingstone.test_pipeline:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q --cov=healingstone.run_pipeline --cov=healingstone.runtime_config --cov=healingstone.runtime_paths --cov=healingstone.metrics_schema --cov-fail-under=45"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
follow_imports = "skip"
disable_error_code = ["import-untyped"]
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
files = [
  "src/healingstone/run_pipeline.py",
  "src/healingstone/runtime_config.py",
  "src/healingstone/runtime_paths.py",
  "src/healingstone/metrics_schema.py",
]
